<resources>
    <string name="app_name">Whatever¿</string>
    <string name="string_levelSelect_Level1bt">1</string>
    <string name="string_levelSelect_Level2bt">2</string>
    <string name="string_levelSelect_Level3bt">3</string>
    <string name="string_levelSelect_Level4bt">4</string>
    <string name="string_levelSelect_Level5bt">5</string>
    <string name="string_levelSelect_Level6bt">6</string>
    <string name="string_levelSelect_Level7bt">7</string>
    <string name="string_levelSelect_Level8bt">8</string>
    <string name="string_levelSelect_Level9bt">9</string>
    <string name="string_levelSelect_Level10bt">10</string>
    <string name="string_main_activity_continueLevelText">Continue Level </string>
    <string name="string_Level1_title">Guess a word!</string>
    <string name="string_Level2_title">Which One is the</string>
    <string name="string_Level3_title">Where is the Sheep?</string>
    <string name="string_Level4_title">"What is the next number?</string>
    <string name="string_Level5_title">Give Peter some water!</string>
    <string name="string_Level6_title">Defeat the enemy!</string>
    <string name="string_Level7_title">Go to sleep!</string>
    <string name="string_Level8_title">Find the way out!</string>
    <string name="string_Level10_title">Unlock!</string>
    <string name="string_LevelPass_nextLevel">Next Level</string>
    <string name="string_LevelPass_levelSelect">Level Select</string>
    <string name="string_LevelPass_messagePlaceholder">I have done something</string>
    <string name="string_LevelPass_bestTimeUsedPlaceHolder">XX:XX</string>
    <string name="string_LevelPass_bestTimeUsedText">Best Time</string>
    <string name="string_LevelPass_timeUsedText">Time used</string>
    <string name="string_LevelPass_levelPassTitle">Level Completed</string>
    <string name="string_LevelPass_timeUsedPlaceHolder">XX:XX</string>
    <string name="string_TopAppBar_soundBtDescription">Toggle Sound</string>
    <string name="string_TopAppBar_settingBtDescription">Settings</string>
    <string name="string_TopAppBar_resetBtDescription">Reset</string>
    <string name="string_TopAppBar_hintBtDescription">Hint</string>
    <string name="string_TopAppBar_backBtDescription">Level Selection</string>
    <string name="string_topAppBar_SettingCloseDescription">Close</string>
    <string name="string_home_selectLevel_text">Okay?</string>
    <string name="string_home_contiueLevel_text">Continue Level</string>
    <string name="string_profile_defaultUsername">Guest</string>
    <string name="string_profile_signIn_function_description">Sign in to save progress / view ranks</string>
    <string name="string_profile_signInOrUp_text">Sign in / Sign up</string>
    <string name="string_profile_leaderboard_text">Leader Board</string>
    <string name="string_profile_option_soundEffect_text">Sound Effect</string>
    <string name="string_leaderboard_default_userName">Guest</string>
    <string name="string_profile_LogOut_text">Log Out</string>
    <string name="string_leaderboard_signIn_function_description">Sign in to view ranks</string>
    <string name="string_leaderboard_signInOrUp_text">Sign in / Sign up</string>
    <string name="string_profile_option_vibration_text">Vibration</string>
    <string name="string_contentDescription_NavigateBack">Level Selection</string>
    <string name="string_contentDescription_hint">Hint</string>
    <string name="string_contentDescription_Reset">Reset</string>
    <string name="string_contentDescription_Settings">Settings</string>
    <string name="string_contentDescription_toggleSound">Toggle Sound</string>
    <string name="string_contentDescription_closeSettings">Close</string>
    <string name="string_Level1_buttonSubmit_text">Submit</string>
    <string name="string_Level1_editText_text">Type Here</string>
    <string name="string_level4_math_question">1, 1, 2, 3, 5, 8, ?</string>
    <string name="string_level4_buttonResetAnswer_text">Reset</string>
    <string name="string_level4_buttonEnterAnswer_text">Enter</string>
    <string name="string_level6_enemy_textDescription">ENEMY</string>
    <string name="string_level6_you_textDescription">YOU</string>
    <string name="string_level10_safe_inner_message">FIN</string>
    <string name="string_level9_btDetails_text">Details</string>

    <string-array name="string_Level1_hints_array">
        <item>"Fat and ter"</item>
        <item>"Try combine two words?"</item>
    </string-array>

    <string-array name="string_level1_level_pass_messages_array">
        <item>"When father is fat"</item>
        <item>"Fatty father"</item>
        <item>"Are ya winning son?"</item>
        <item>"That was quite easy"</item>
        <item>"As expected"</item>
    </string-array>

    <string-array name="string_Level2_hints_array">
        <item>"Who is the \"biggest?\""</item>
        <item>"Pay attention to the context"</item>
    </string-array>

    <string-array name="string_level2_level_pass_messages_array">
        <item>"\"Totally\" Correct"</item>
        <item>"Can it become as big as the universe?"</item>
        <item>"Yes Cuz why not?"</item>
    </string-array>

    <string-array name="string_Level3_hints_array">
        <item>Sheep is behind the fox. Move the fox far away!</item>
        <item>"Is there any thing behind the fox?"</item>
        <item>"I think there is some secrets?"</item>
    </string-array>

    <string-array name="string_level3_level_pass_messages_array">
        <item>"Why would a sheep want to be a fox?"</item>
        <item>"Tricky?"</item>
        <item>"Fox skinned sheep???"</item>
    </string-array>

    <string-array name="string_Level4_hints_array">
        <item>"It's a fibonacci sequence, just google it"</item>
    </string-array>

    <string-array name="string_level4_level_pass_messages_array">
        <item>"You must be good at math isn't it?"</item>
        <item>"I wonder how big it can be......"</item>
        <item>"Can we count through aleph null?"</item>
        <item>"Would it be bigger that TREE(3)?"</item>
    </string-array>

    <string-array name="string_Level5_hints_array">
        <item>"Is there only 4 gears?"</item>
        <item>"Can we make use of the system UI elements?"</item>
    </string-array>

    <string-array name="string_level5_level_pass_messages_array">
        <item>"I wonder why an imaginary UI elements can help him......"</item>
        <item>"???"</item>
        <item>"Don't unplug me"</item>
    </string-array>

    <string-array name="string_Level6_hints_array">
        <item>"Can you steal the weapon?"</item>
        <item>"I wonder if I can steal the enemy's weapon "</item>
        <item>"Short distance weapons are no match to the long range weapons!"</item>
    </string-array>

    <string-array name="string_level6_level_pass_messages_array">
        <item>"Should I call you a thief?"</item>
        <item>"What else can I grab from enemy?"</item>
        <item>"Your parents are mad right now......"</item>
        <item>"Ouch"</item>
    </string-array>

    <string-array name="string_Level7_hints_array">
        <item>"Who wants to sleep with the light?"</item>
        <item>"I am sensitive to any light when sleeping"</item>
        <item>"Try toggle some setting on your phone"</item>
        <item>"Who wants light theme on your phone when on your bed?"</item>
        <item>"Try covering you top part of your phone"</item>
    </string-array>

    <string-array name="string_level7_level_pass_messages_array">
        <item>"Have a nice dream"</item>
        <item>"One sheep, two sheep, three sheep…"</item>
        <item>"Sweet Dreams"</item>
    </string-array>

    <string-array name="string_Level8_hints_array">
        <item>"It seems theres a better way to do it"</item>
        <item>"If you can't reach the goal, then why not try to let the goal reach you?"</item>
        <item>"Why work hard when you can work smart?"</item>
    </string-array>

    <string-array name="string_level8_level_pass_messages_array">
        <item>"That was hard isn't it?"</item>
        <item>"Ever played Rotaneo?"</item>
        <item>"Shh, there a better way to do it"</item>
    </string-array>

    <string-array name="string_Level9_hints_array">
        <item>"Sorry! Help not available lol"</item>
        <item>"Go get help"</item>
    </string-array>

    <string-array name="string_level9_level_pass_messages_array">
        <item>"Did you steal the login credentials?"</item>
        <item>"Are you being honest?"</item>
    </string-array>

    <string-array name="string_Level10_hints_array">
        <item>"Try spin your phone?"</item>
    </string-array>

    <string-array name="string_level10_level_pass_messages_array">
        <item>"What's inside?"</item>
        <item>"Tresurous"</item>
    </string-array>

    <string-array name="string_profile_references_array">
        <item>"Firebase Authentication"</item>
        <item>"Firebase Realtime Database"</item>
        <item>"Firebase Storage"</item>
        <item>"Lottie Animations"</item>
        <item>"Picasso</item>
    </string-array>


</resources>