<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Level4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_topbar_Level4"
        android:layout_width="411dp"
        android:layout_height="728dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/text_Level4_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="123dp"
            android:fontFamily="@font/inter_variable"
            android:paddingBottom="10dp"
            android:text="@string/string_Level4_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_Level4_NavigateBackBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/string_TopAppBar_backBtDescription"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:tooltipText="Level Selection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <LinearLayout
            android:id="@+id/view_topbarButtons_Level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/button_Level4_HintBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/string_TopAppBar_hintBtDescription"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/baseline_lightbulb_outline_24"
                android:tooltipText="Hint"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/button_Level4_ResetBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/string_TopAppBar_resetBtDescription"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/baseline_refresh_24"
                android:tooltipText="Restart Level"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/button_Level4_SettingsBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/string_TopAppBar_settingBtDescription"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/baseline_settings_24"
                android:tooltipText="Settings"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/button_Level4_SoundBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/string_TopAppBar_soundBtDescription"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_volume_on_24"
                android:tooltipText="Toggle Sound"
                android:visibility="gone"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/button_Level4_CloseBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/string_topAppBar_SettingCloseDescription"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/baseline_close_24"
                android:tooltipText="Close Settings"
                android:visibility="gone"
                app:tint="?attr/colorOnSurface" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_Level4_Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="123dp"
            android:fontFamily="@font/inter_variable"
            android:paddingBottom="10dp"
            android:text="@string/string_level4_math_question"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_Level4_Answer"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:singleLine="true"
            android:fontFamily="@font/inter_variable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_Question2"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/button_Level4_ResetAnswerBt"
            android:layout_width="123dp"
            android:layout_height="71dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="192dp"
            android:text="@string/string_level4_buttonResetAnswer_text"
            android:textSize="20sp"
            android:fontFamily="@font/inter_variable"
            android:textColor="@color/background"
            android:backgroundTint="@color/foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_Level4_Enter2Bt"
            android:layout_width="132dp"
            android:layout_height="74dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="192dp"
            android:text="@string/string_level4_buttonEnterAnswer_text"
            android:textSize="20sp"
            android:fontFamily="@font/inter_variable"
            android:textColor="@color/background"
            android:backgroundTint="@color/foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_LevelLayout_Level4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_topbar_Level4"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="gone">

        <!-- Place your Level Element here -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_Level4_Pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/resultScreenBackground"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="gone"> <!-- To block from interacting the item behind the result screen -->

        <TextView
            android:id="@+id/text_Level4_TimeUsedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_variable"
            android:text="@string/string_LevelPass_timeUsedText"
            android:textColor="@color/foreground"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_TimeUsedTitle" />

        <TextView
            android:id="@+id/text_Level4_LevelPassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/inter_variable"
            android:text="@string/string_LevelPass_levelPassTitle"
            android:textColor="@color/foreground"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_Level4_TimeUsedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_variable"
            android:text="@string/string_LevelPass_timeUsedText"
            android:textColor="@color/foreground"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_LevelPassTitle" />

        <TextView
            android:id="@+id/text_Level4_BestTimeUsedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_variable"
            android:text="@string/string_LevelPass_bestTimeUsedText"
            android:textColor="@color/foreground"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_TimeUsedText" />

        <TextView
            android:id="@+id/text_Level4_Best_TimeUsedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_variable"
            android:text="@string/string_LevelPass_bestTimeUsedPlaceHolder"
            android:textColor="@color/foreground"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_BestTimeUsedTitle" />

        <TextView
            android:id="@+id/text_LevelTemPlate_PassMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:fontFamily="@font/inter_variable"
            android:paddingHorizontal="10dp"
            android:text="@string/string_LevelPass_messagePlaceholder"
            android:textColor="@color/foreground"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Level4_TimeUsedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_LevelTemPlate_PassMessage"
            app:layout_constraintVertical_bias="0.096">

            <Button
                android:id="@+id/button_Level4_HomeBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/foreground"
                android:drawableEnd="@drawable/baseline_home_24"
                android:drawableTint="@color/background"
                android:text="@string/string_LevelPass_levelSelect"
                android:textColor="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_Level4_NextLevelBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/foreground"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:drawableTint="@color/background"
                android:text="@string/string_LevelPass_nextLevel"
                android:textColor="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>